<resources>
    <string name="app_name">CourtCounterApp</string>
    <string name="textView_team_a">Team A</string>
    <string name="textView_team_b">Team B</string>
    <string name="textView_0">0</string>
    <string name="points_3_button">+3 Points</string>
    <string name="points_2_button">+2 Points</string>
    <string name="free_throw_button">Free Throw</string>
    <string name="reset_button">Reset</string>

</resources>
