<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/AppFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_team_a"
                android:textSize="14sp"
                android:textColor="#616161"
                android:gravity="center_horizontal"
                android:padding="16dp"/>

            <TextView
                style="@style/AppFont"
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_0"
                android:textSize="56sp"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:padding="4dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_3_button"
                android:onClick="addThreeForTeamA"
                android:padding="20dp"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_2_button"
                android:onClick="addTwoForTeamA"
                android:padding="20dp"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_throw_button"
                android:onClick="addOneForTeamA"
                android:padding="20dp"
                android:layout_margin="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/AppFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_team_b"
                android:textSize="14sp"
                android:textColor="#616161"
                android:gravity="center_horizontal"
                android:padding="16dp" />

            <TextView
                style="@style/AppFont"
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_0"
                android:textSize="56sp"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:padding="4dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_3_button"
                android:onClick="addThreeForTeamB"
                android:padding="20dp"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_2_button"
                android:onClick="addTwoForTeamB"
                android:padding="20dp"
                android:layout_margin="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_throw_button"
                android:onClick="addOneForTeamB"
                android:padding="20dp"
                android:layout_margin="8dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:onClick="resetScore"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_marginBottom="16dp"/>

</RelativeLayout>